# clov-ai

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  README.md  SECURITY.md  install.sh
.claude/agents/: technical-writer.md
.claude/skills/: ship.md
.github/workflows/: release-please.yml  release.yml
Formula/: clov.rb
docs/: AUDIT_GUIDE.md  TROUBLESHOOTING.md  tracking.md
hooks/: clov-awareness.md  clov-rewrite.sh  test-clov-rewrite.sh
scripts/: benchmark.sh  check-installation.sh  clov-economics.sh  test-all.sh  test-aristote.sh  test-tracking.sh
src/: cc_savings.rs  deps.rs  diff_cmd.rs  env_cmd.rs  find_cmd.rs  gain.rs  gh_cmd.rs  grep_cmd.rs  hook_audit_cmd.rs  init.rs  integrity.rs  json_cmd.rs  log_cmd.rs  ls.rs  main.rs  mcp_filters.rs  mcp_proxy.rs  read.rs  rewrite_cmd.rs  summary.rs  tracking.rs  tree.rs  universal_filter.rs  wc_cmd.rs  wget_cmd.rs
src/discover/: registry.rs  report.rs  rules.rs
src/learn/: report.rs
